Finished refactoring backend to allow for correct answers to be optional. Now users can choose between selecting one of their survey options as the correct answer or leaving the correct answer option null.
TODO:
1. Add a shareable link for created surveys so users can share their surveys with others. Generate platform specific share links for social media sites.
2. Add a webhook ot notify the app when someone completes a user's survey.
3. Add survey persistence to the front end so that current workflows are persisted upon refreshes and redirects.